@@ -36,6 +36,16 @@ class TEmailAddressValidator extends TRegularExpressionValidator
 	const EMAIL_REGEXP="\\w+([-+.]\\w+)*@\\w+([-.]\\w+)*\\.\\w+([-.]\\w+)*";
 
 	/**
+	 * Gets the name of the javascript class responsible for performing validation for this control.
+	 * This method overrides the parent implementation.
+	 * @return string the javascript class name
+	 */
+	protected function getClientClassName()
+	{
+		return 'Prado.WebUI.TEmailAddressValidator';
+	}
+
+	/**
 	 * @return string the regular expression that determines the pattern used to validate a field.
 	 */
 	public function getRegularExpression()
