@@ -168,15 +168,15 @@ class TRadioButton extends TCheckBox
 		$writer->renderBeginTag('input');
 		$writer->renderEndTag();
 	}
-	
+
 	/**
 	 * Renders the client-script code.
 	 */
 	protected function renderClientControlScript($writer)
 	{
-		$cs = $this->getPage()->getClientScript(); 
-		$cs->registerPostBackControl(get_class($this),$this->getPostBackOptions());
-	}	
+		$cs = $this->getPage()->getClientScript();
+		$cs->registerPostBackControl('Prado.WebUI.TRadioButton',$this->getPostBackOptions());
+	}
 }
 
 ?>
