@@ -1,5 +1,6 @@
 Version 3.1.0 To be released
 ============================
+BUG: Ticket#188 - Postback js caused controls not inheritable (Qiang)
 ENH: Ticket#99 - TXmlTransform control (Knut)
 ENH: Ticket#117 - added support to configure subproperties in a group. (Qiang)
 NEW: TOutputCache (Qiang)
@@ -9,6 +10,7 @@ NEW: SQLMap (Wei)
 
 Version 3.0.2 July 2, 2006
 ==========================
+BUG: Ticket#182 - List and validator controls cause problem in child classes (Qiang)
 BUG: Ticket#213 - PRADO Requirements Checker charset error (Qiang)
 CHG: ensureChildControls() is now invoked in TControl::initRecursive (Qiang)
 
